# alkye-assessment

./: .env.example  Cargo.toml  README.md  ai_usage.md
migrations/: 20260606065154_task_management_schema.sql  20260606075000_add_2fa_to_email_logs.sql
src/: auth.rs  main.rs  management_routes.rs  model.rs  permisiion.rs  state.rs  user_management.rs
